comment plot append to md file

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -9,12 +9,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+#                    echo '![](./plot.png "Confusion Matrix")' >> report.md
       - run: |
           pip install -r requirements.txt
           python train.py  # generate plot.png
           # Create CML report
           cat metrics.txt >> report.md
-          echo '![](./plot.png "Confusion Matrix")' >> report.md
           cml comment create report.md
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
