--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - uses: iterative/setup-cml@v1
       - uses: actions/checkout@v3
+# modified token
 #        with:
 #          ref: ${{ github.event.pull_request.head.sha }}
 #                    echo '![](./plot.png "Confusion Matrix")' >> report.md
