setup python added

--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,6 +6,7 @@ jobs:
 #    container: docker://ghcr.io/iterative/cml:0-dvc2-base1
     steps:
       - uses: iterative/setup-cml@v1
+      - uses: actions/setup-python@v4
       - uses: actions/checkout@v3
 # modified token
 #        with:
