--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
           issue-number: 1
           body: |
-            This is a multi-line test comment
+            This is a multi-line test comment, test issue #1
             - With GitHub **Markdown** :sparkles:
             - Created by [create-or-update-comment][1]
 
