--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -23,12 +23,13 @@ jobs:
         uses: peter-evans/create-or-update-comment@v3
         with:
           issue-number: 1
-          body: |
-            This is a multi-line test comment, test issue #1
-            - With GitHub **Markdown** :sparkles:
-            - Created by [create-or-update-comment][1]
+          # body: |
+          #   This is a multi-line test comment, test issue #1
+          #   - With GitHub **Markdown** :sparkles:
+          #   - Created by [create-or-update-comment][1]
 
-            [1]: https://github.com/peter-evans/create-or-update-comment
+          #   [1]: https://github.com/peter-evans/create-or-update-comment
           reactions: '+1'
+          body-path: report.md
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
