--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,6 +18,8 @@ jobs:
           python train.py  # generate plot.png
           # Create CML report
           cat metrics.txt >> report.md
+          plotfile="$(ls -l plot.png)"
+          echo "$plotfile" >> report.md
           echo '![](./plot.png "Confusion Matrix")' >> report.md
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v3
