--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -22,17 +22,24 @@ jobs:
           echo "$plotfile" >> report.md
           echo "$(pwd)" >> report.md
           echo '![](./plot.png "Confusion Matrix")' >> report.md
-      - name: Create comment
-        uses: peter-evans/create-or-update-comment@v3
-        with:
-          issue-number: 1
-          # body: |
-          #   This is a multi-line test comment, test issue #1
-          #   - With GitHub **Markdown** :sparkles:
-          #   - Created by [create-or-update-comment][1]
+          body="$(cat report.md)"
+      - name: Create commit comment
+        id: get-comment-body
+        uses: peter-evans/commit-comment@v2
+        with: 
+          sha: ${{ github.sha }}
+          body: ${{ steps.get-comment-body.outputs.body }}
+      # - name: Create comment
+      #   uses: peter-evans/create-or-update-comment@v3
+      #   with:
+      #     issue-number: 1
+      #     # body: |
+      #     #   This is a multi-line test comment, test issue #1
+      #     #   - With GitHub **Markdown** :sparkles:
+      #     #   - Created by [create-or-update-comment][1]
 
-          #   [1]: https://github.com/peter-evans/create-or-update-comment
-          reactions: '+1'
-          body-path: report.md
+      #     #   [1]: https://github.com/peter-evans/create-or-update-comment
+      #     reactions: '+1'
+      #     body-path: report.md
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
