--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -13,7 +13,8 @@ jobs:
 #          ref: ${{ github.event.pull_request.head.sha }}
 #                    echo '![](./plot.png "Confusion Matrix")' >> report.md
 #                   cml comment create report.md
-      - run: |
+      - id: get-comment-body
+        run: |
           pip install -r requirements.txt
           python train.py  # generate plot.png
           # Create CML report
@@ -24,7 +25,6 @@ jobs:
           echo '![](./plot.png "Confusion Matrix")' >> report.md
           body="$(cat report.md)"
       - name: Create commit comment
-        id: get-comment-body
         uses: peter-evans/commit-comment@v2
         with: 
           sha: ${{ github.sha }}
