--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -32,6 +32,7 @@ jobs:
             This is a multi-line test comment
             - With GitHub **Markdown** :sparkles:
             - Created by [commit-comment][1]
+            ![confusion matrix](./plot.png)
       # - name: Create comment
       #   uses: peter-evans/create-or-update-comment@v3
       #   with:
