--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -27,11 +27,10 @@ jobs:
       - name: upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: plot
-          path: plot.png
-        with:
-          name: report
-          path: report.md
+          name: plot and report files
+          path: |
+            plot.png
+            report.md
       - name: Create commit comment
         uses: peter-evans/commit-comment@v2
         with: 
