--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -22,7 +22,7 @@ jobs:
           plotfile="$(ls -l plot.png)"
           echo "$plotfile" >> report.md
           echo "$(pwd)" >> report.md
-          echo '![](./plot.png "Confusion Matrix")' >> report.md
+          echo '![](./plot.png)' >> report.md
           body="$(cat report.md)"
           cml comment create --publish report.md
         env:
