--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     container: docker://ghcr.io/iterative/cml:latest
     steps:
-      - uses: iterative/setup-cml@v1
-      - uses: actions/setup-python@v4
-      - uses: actions/checkout@v3
+#      - uses: iterative/setup-cml@v1
+#      - uses: actions/setup-python@v4
+#      - uses: actions/checkout@v3
 # modified token
 #        with:
 #          ref: ${{ github.event.pull_request.head.sha }}
