--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -6,7 +6,7 @@ jobs:
     container: docker://ghcr.io/iterative/cml:latest
     steps:
 #      - uses: iterative/setup-cml@v1
-#      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
 #      - uses: actions/checkout@v3
 # modified token
 #        with:
