--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,9 +5,24 @@ name: self-hosted-example
 jobs:
   simpleExample:
     runs-on: self-hosted
+    container: docker://ghcr.io/iterative/cml:latest
     steps:
-    # checkout branch
     - uses: actions/checkout@master
+    - uses: actions/setup-python@v4
+    - name: train model
+      run: |
+          pip install -r requirements.txt
+          python train.py  # generate plot.png
+          # Create CML report
+          cat metrics.txt >> report.md
+          plotfile="$(ls -l plot.png)"
+          echo "cml version: $(cml --version)" >> report.md
+          echo "$plotfile" >> report.md
+          echo "$(pwd)" >> report.md
+          echo '![](./plot.png)' >> report.md
+          body="$(cat report.md)"
+          cml comment create --publish report.md
+    # checkout branch
     - name: Create commit comment
       uses: peter-evans/commit-comment@v2
       with: 
