--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,7 +5,7 @@ name: self-hosted-example
 jobs:
   simpleExample:
 #   self-hosted ubuntu-latest
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container: docker://ghcr.io/iterative/cml:latest
     steps:
     - uses: actions/checkout@master
@@ -24,7 +24,7 @@ jobs:
           body="$(cat report.md)"
           cml comment create --publish report.md
       env:
-          REPO_TOKEN:  $TOKEN
+          REPO_TOKEN:  ${{ secrets.TOKEN }}
     - name: Create commit comment
       uses: peter-evans/commit-comment@v2
       with: 
