--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -13,10 +13,10 @@ jobs:
     - uses: iterative/setup-cml@v1    
     - name: train model
       run: |
-          # pip install -r requirements.txt
-          # python train.py  # generate plot.png
+          pip install -r requirements.txt
+          python train.py  # generate plot.png
           # Create CML report
-          # cat metrics.txt >> report.md
+          cat metrics.txt >> report.md
           echo "hello runner" >> report.md
           # echo '![](./plot.png)' >> report.md
           cml comment create --publish report.md
