--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -9,7 +9,7 @@ jobs:
 #    container: docker://ghcr.io/iterative/cml:latest
     steps:
     - uses: actions/checkout@master
-#    - uses: actions/setup-python@v4
+#    - uses: actions/setup-python@v4  # testing windows self hosting
     - uses: iterative/setup-cml@v1    
     - name: train model
       run: |
