--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,6 +7,7 @@ jobs:
 #   self-hosted ubuntu-latest
     runs-on: cml-gpu
 #    container: docker://ghcr.io/iterative/cml:latest
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
     steps:
     - uses: actions/checkout@master
 #    - uses: actions/setup-python@v4  # testing cml-gpu self hosting
@@ -17,6 +18,8 @@ jobs:
           python train.py  # generate plot.png
           # Create CML report
           cat metrics.txt >> report.md
+          gpuinfo="$(nvidia-smi)"
+          echo $gpuinfo >> report.md
           # echo '![](./plot.png)' >> report.md
           cml comment create --publish report.md
       env:
