--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -18,8 +18,8 @@ jobs:
           python train.py  # generate plot.png
           # Create CML report
           cat metrics.txt >> report.md
-          gpuinfo="$(nvidia-smi)"
-          echo $gpuinfo >> report.md
+          # gpuinfo="$(nvidia-smi)"
+          # echo $gpuinfo >> report.md
           # echo '![](./plot.png)' >> report.md
           cml comment create --publish report.md
       env:
