--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,11 +7,11 @@ jobs:
 #   self-hosted ubuntu-latest
     runs-on: cml-gpu
 #    container: docker://ghcr.io/iterative/cml:latest
-#    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
+    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
     steps:
     - uses: actions/checkout@master
 #    - uses: actions/setup-python@v4  # testing cml-gpu self hosting
-    - uses: iterative/setup-cml@v1   # not required in container
+#    - uses: iterative/setup-cml@v1   # not required in container
     - name: train model
       run: |
           pip install -r requirements.txt
