--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -7,7 +7,7 @@ jobs:
 #   self-hosted ubuntu-latest
     runs-on: cml-gpu
 #    container: docker://ghcr.io/iterative/cml:latest
-    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
+#    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
     steps:
     - uses: actions/checkout@master
 #    - uses: actions/setup-python@v4  # testing cml-gpu self hosting
@@ -23,7 +23,7 @@ jobs:
           # echo '![](./plot.png)' >> report.md
           cml comment create --publish report.md
       env:
-          REPO_TOKEN:  ${{ secrets.TOKEN }}
+          REPO_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
 #     - name: Create commit comment
 #       uses: peter-evans/commit-comment@v2
 #       with: 
