--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
 #    - uses: actions/setup-python@v4  # testing cml-gpu self hosting
-#    - uses: iterative/setup-cml@v1   # not required in container
+#    - uses: iterative/setup-cml@v1   # not required in container#
     - name: train model
       run: |
           pip install -r requirements.txt
@@ -23,7 +23,7 @@ jobs:
           # echo '![](./plot.png)' >> report.md
           cml comment create --publish report.md
       env:
-          REPO_TOKEN:  ${{ secrets.TOKEN }}
+          REPO_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
 #     - name: Create commit comment
 #       uses: peter-evans/commit-comment@v2
 #       with: 
