--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -14,16 +14,17 @@ jobs:
 #    - uses: iterative/setup-cml@v1   # not required in container##
     - name: train model
       run: |
-          pip install -r requirements.txt
-          python train.py  # generate plot.png
+          # pip install -r requirements.txt
+          # python train.py  # generate plot.png
           # Create CML report
-          cat metrics.txt >> report.md
+          # cat metrics.txt >> report.md
           # gpuinfo="$(nvidia-smi)"
           ## echo $gpuinfo >> report.md
           # echo '![](./plot.png)' >> report.md
-          echo "cml comment create --publish report.md --log debug" > report.md
-          cml comment create --publish report.md --log debug
-
+          # echo "cml comment create --publish report.md --log debug" > report.md
+          source $HOME/bin/torchenv/bin/activate
+          python gpuinfo.py > report.md
+          cml comment create --publish report.md
       env:
           REPO_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
 #     - name: Create commit comment
