--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -22,8 +22,12 @@ jobs:
           ## echo $gpuinfo >> report.md
           # echo '![](./plot.png)' >> report.md
           # echo "cml comment create --publish report.md --log debug" > report.md
-          source $HOME/bin/torchenv/bin/activate
-          python gpuinfo.py > report.md
+          
+          # source $HOME/bin/torchenv/bin/activate
+          # python gpuinfo.py > report.md
+          
+          pip install --find-links ./cache --no-index tensorflow==2.12.0
+          python gpudocker.py > report.md
           cml comment create --publish report.md
       env:
           REPO_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
