--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,7 +5,7 @@ name: self-hosted-example
 jobs:
   simpleExample:
 #   self-hosted ubuntu-latest
-    runs-on: self-hosted
+    runs-on: gpu
 #    container: docker://ghcr.io/iterative/cml:latest
 #    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
     steps:
