--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -24,7 +24,7 @@ jobs:
           # echo "cml comment create --publish report.md --log debug" > report.md
           
           # source $HOME/bin/torchenv/bin/activate
-          # python gpuinfo.py > report.md
+          # python gpuinfo.py > report.md #
           
           pip install --find-links /home/runner/cache --no-index tensorflow==2.12.0
           python gpudocker.py > report.md
