--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,10 +16,10 @@ jobs:
       run: |
           pip install -r requirements.txt
           python train.py  # generate plot.png#
-          cat metrics.txt >> README.md
           cp plot.png data/plot.png
           git add data/plot.png
-          echo  '![](/data/plot.png)' >> README.md
+          echo  '![](/data/plot.png)' > README.md
+          cat metrics.txt >> README.md
           git config --global user.email "gopinath@test.com"
           git config --global user.name "gopinath"
           git add README.md
