--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -4,8 +4,8 @@ name: self-hosted-example
 
 jobs:
   simpleExample:
-#   self-hosted ubuntu-latest
-    runs-on: gpu
+#   self-hosted ubuntu-latest gpu
+    runs-on: ubuntu-latest
 #    container: docker://ghcr.io/iterative/cml:latest
 #    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
     steps:
