--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -5,7 +5,7 @@ name: self-hosted-example
 jobs:
   simpleExample:
 #   self-hosted ubuntu-latest gpu
-    runs-on: ubuntu-latest
+    runs-on: cml
 #    container: docker://ghcr.io/iterative/cml:latest
 #    container: docker://ghcr.io/iterative/cml:0-dvc2-base1-gpu
     steps:
@@ -20,8 +20,8 @@ jobs:
           git add data/plot.png
           echo  '![](/data/plot.png)' > README.md
           cat metrics.txt >> README.md
-          git config --global user.email "gopinath@test.com"
-          git config --global user.name "gopinath"
+          # git config --global user.email "gopinath@test.com"
+          # git config --global user.name "gopinath"
           git add README.md
           git commit -m "updated readme"
           git push origin main
