--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,7 +16,7 @@ jobs:
       run: |
           TAG=$(date +"%Y%m%d%H%M")
           docker build -t "temp:${TAG}" .
-          docker run --name "temp${TAG}" -it temp:"${TAG}"
+          docker run --name "temp${TAG}" temp:"${TAG}"
           docker rm "temp${TAG}"
           # pip install -r requirements.txt
           # python train.py  # generate plot.png#
